Modernize with Embulk v0.10.25